Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,5 +8,7 @@ trigger:
 - task: CmdLine@2
   inputs:
     script: |
-      echo Write your commands here
+      javac HelloWorld.java
+
+      java HelloWorld
       
